--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8081
+server.servlet.context-path=/
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gov_poll?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=mysql1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+
+spring.jpa.open-in-view=false
